--- a/css/table.css
+++ b/css/table.css
@@ -18,3 +18,16 @@ th {
 tr:hover {
     background-color: #f5f5f5;
 }
+input[type="submit"] {
+    padding: 5px 10px;
+    margin: 0 5px;
+    border: none;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+input[type="submit"]:hover {
+    background-color: #0056b3;
+}
