--- a/css/table.css
+++ b/css/table.css
@@ -1,7 +1,7 @@
 table {
   border-collapse: collapse;
-  width: 100%;
-  margin: 20px 0;
+  width: 95%;
+  margin: 20px 40px;
   font-family: Arial, sans-serif;
   color: #333;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
