--- a/css/registrationStyle.css
+++ b/css/registrationStyle.css
@@ -8,7 +8,6 @@
 
 body {
   height: 100vh;
-  background-color: #343a40;
   display: flex;
 }
 
@@ -20,13 +19,13 @@ body {
   border: 1px solid #ced4da;
   /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
   font-family: Exo;
-  color: white;
-  background-color: #212529;
+  color: black;
   display: flex;
   flex-direction: column;
   padding: 10px;
   position: relative;
   overflow: hidden;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .heading {
@@ -47,7 +46,7 @@ body {
 .steps-container > hr {
   width: 100%;
   height: 5px;
-  background-color: white;
+  background-color: rgb(12, 10, 10);
   border-radius: 20px;
   margin-top: 25px;
   position: absolute;
@@ -101,7 +100,6 @@ body {
 .scro {
   width: fit-content;
   display: flex;
-  background-color: green;
   margin-left: 0;
   transition-duration: 0.5s;
 }
@@ -229,7 +227,7 @@ body {
   border-radius: 5px;
   background-color: transparent;
   border: none;
-  color: white;
+  color: rgb(10, 10, 10);
   cursor: pointer;
   left: -50px;
 }
